--- a/app/src/main/res/layout/dialog_picture.xml
+++ b/app/src/main/res/layout/dialog_picture.xml
@@ -10,7 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="@string/dialog_photo_text"/>
+        android:text="@string/dialog_photo_text"
+        style="@style/TextAppearance.MaterialComponents.Body1"/>
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/photo_pref_switch"
@@ -27,5 +28,6 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
         android:layout_toRightOf="@+id/photo_pref_switch"
+        style="@style/TextAppearance.MaterialComponents.Body1"
         android:text="@string/dialog_photo_switch"/>
 </RelativeLayout>
