--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
+                android:scaleType="fitCenter"
                 app:layout_collapseMode="parallax"/>
 
             <androidx.appcompat.widget.Toolbar
@@ -74,13 +74,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/favorite_title"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
 
                     <TextView
-                        style="@style/TextAppearance.AppCompat.Body1"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/favorites_content"/>
+                        android:text="@string/favorites_content"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
                 </LinearLayout>
 
@@ -106,7 +107,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="16dp"
                         android:text="Palette"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
 
                     <TextView
                         android:id="@+id/palette_vibrant"
@@ -114,6 +115,7 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Vibrant"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -122,6 +124,7 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Vibrant Dark"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -130,6 +133,7 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Vibrant Light"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -138,6 +142,7 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Muted"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -146,6 +151,7 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Muted Dark"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:textColor="@android:color/white"/>
 
                     <TextView
@@ -154,6 +160,7 @@
                         android:layout_height="wrap_content"
                         android:padding="8dp"
                         android:text="Muted Light"
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:textColor="@android:color/white"/>
 
                 </LinearLayout>
@@ -182,7 +189,7 @@
                         android:layout_marginLeft="16dp"
                         android:layout_marginTop="16dp"
                         android:text="PercentageLayout"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
 
 
                     <androidx.percentlayout.widget.PercentRelativeLayout
@@ -192,6 +199,7 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            style="@style/TextAppearance.MaterialComponents.Body1"
                             android:id="@+id/perc1_left"
                             app:layout_widthPercent="40%"
                             android:layout_height="64dp"
@@ -201,6 +209,7 @@
                             android:textColor="@color/grey_900"/>
 
                         <TextView
+                            style="@style/TextAppearance.MaterialComponents.Body1"
                             android:id="@+id/perc1_middle"
                             app:layout_widthPercent="20%"
                             android:layout_height="64dp"
@@ -210,6 +219,7 @@
                             android:textColor="@color/grey_900"/>
 
                         <TextView
+                            style="@style/TextAppearance.MaterialComponents.Body1"
                             android:id="@+id/perc1_right"
                             app:layout_widthPercent="40%"
                             android:layout_height="64dp"
@@ -226,6 +236,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:id="@+id/perc2_left"
                         app:layout_widthPercent="20%"
                         android:layout_height="64dp"
@@ -235,6 +246,7 @@
                         android:textColor="@color/grey_900"/>
 
                     <TextView
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:id="@+id/perc2_middle"
                         app:layout_widthPercent="60%"
                         android:layout_height="64dp"
@@ -244,6 +256,7 @@
                         android:textColor="@color/grey_900"/>
 
                     <TextView
+                        style="@style/TextAppearance.MaterialComponents.Body1"
                         android:id="@+id/perc2_right"
                         app:layout_widthPercent="20%"
                         android:layout_height="64dp"
@@ -273,11 +286,13 @@
 
                     <TextView
                         android:id="@+id/regulations_title"
-                        style="@style/TextAppearance.AppCompat.Body1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Wikipedia Page"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
+                        android:layout_marginBottom="16dp"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginTop="16dp"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
 
                     <WebView
                         android:id="@+id/regulations_webview"
