--- a/app/src/main/res/menu/profile_actions.xml
+++ b/app/src/main/res/menu/profile_actions.xml
@@ -3,6 +3,6 @@
     <item
         android:id="@+id/action_save"
         android:title="@string/menu_save"
-        android:icon="@drawable/ic_vct_save"
+        android:icon="@drawable/vct_save"
         android:showAsAction="withText|always"  />
 </menu>
