Bottom Sheet - Updates to style and add coordinated motion
Rounded corners backed by elevation (quite the MT experience).

Replace the X with an up carat, that rotates 180 degrees in coordination with the  slide of the bottom pannel.

--- a/app/src/main/res/layout/include_scaletext_layout.xml
+++ b/app/src/main/res/layout/include_scaletext_layout.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bg_rounded"
     android:clipToPadding="true"
-    android:elevation="40dp"
+    android:elevation="8dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     tools:showIn="@layout/activity_user">
 
@@ -40,7 +40,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:background="@drawable/vct_close" />
+                android:background="@drawable/vct_carat_up" />
         </RelativeLayout>
 
         <TextView
