--- a/app/src/main/res/drawable/bg_rounded.xml
+++ b/app/src/main/res/drawable/bg_rounded.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/grey_100" />
-    <corners android:radius="20dp"></corners>
+    <corners android:topRightRadius="20dp"  android:topLeftRadius="20dp"></corners>
 </shape>
